--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,6 +20,8 @@
 
   <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
 
+  <script src="/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="/js/popper.min.js"></script>
   <script src="/bootstrap@5.0.2/js/bootstrap.bundle.min.js"></script>
   <script src="/js/copyClipboard.js"></script>
   <script src="/tocbot/tocbot.min.js"></script>
