--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,7 +23,7 @@
 
 <link
   rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 />
 <!-- Bootstrap CSS -->
 <link href="/bootstrap@5.0.2/css/bootstrap.min.css" rel="stylesheet" />
@@ -38,3 +38,4 @@
 <link href="/css/copy.css" rel="stylesheet" />
 <link href="/css/tags.css" rel="stylesheet" />
 <link href="/css/content.css" rel="stylesheet" />
+<link href="/css/admonition.css" rel="stylesheet" />
