--- a/layouts/shortcodes/admonition.html
+++ b/layouts/shortcodes/admonition.html
@@ -12,30 +12,32 @@
 {{- $iconMap  = dict "bug" "fas fa-bug fa-fw" | merge $iconMap -}}
 {{- $iconMap  = dict "example" "fas fa-list-ol fa-fw" | merge $iconMap -}}
 {{- $iconMap  = dict "quote" "fas fa-quote-right fa-fw" | merge $iconMap -}}
-{{- $iconDetails := "fas fa-angle-right fa-fw" -}}
 
+
+{{- $type := "note" -}}
+{{- $title := "Note" -}}
+{{- $collapseId := "" -}}
+{{- $isOpen := true -}} 
 {{- if .IsNamedParams -}}
-    {{- $type := .Get "type" | default "note" -}}
-    <div class="details admonition {{ $type }}{{ if .Get `open` | ne false }} open{{ end }}">
-        <div class="details-summary admonition-title">
-            <i class="icon {{ index $iconMap $type | default (index $iconMap "note") }}"></i>{{ .Get "title" | default (T $type) }}<i class="details-icon {{ $iconDetails }}"></i>
-        </div>
-        <div class="details-content">
-            <div class="admonition-content">
-                {{- $inner -}}
-            </div>
-        </div>
-    </div>
+    {{- $type = .Get "type" | default "note" -}}
+    {{- $title = .Get "title" | default (T $type) -}}
+    {{- $collapseId = printf "%s-%s" $type (sha1 (.Page.File.Path)) -}}
+    {{- $isOpen = .Get "open" | default true -}}  
 {{- else -}}
-    {{- $type := .Get 0 | default "note" -}}
-    <div class="details admonition {{ $type }}{{ if .Get 2 | ne false }} open{{ end }}">
-        <div class="details-summary admonition-title">
-            <i class="icon {{ index $iconMap $type | default (index $iconMap "note") }}"></i>{{ .Get 1 | default (T $type) }}<i class="details-icon {{ $iconDetails }}"></i>
-        </div>
-        <div class="details-content">
-            <div class="admonition-content">
-                {{- $inner -}}
-            </div>
-        </div>
-    </div>
+    {{- $type = .Get 0 | default "note" -}}
+    {{- $title = .Get 1 | default (T $type) -}}
+    {{- $collapseId = printf "%s-%s" $type (sha1 (.Page.File.Path)) -}}
 {{- end -}}
+
+<div class="alert alert-{{ $type }} mb-3 admonition-block" role="alert">
+    <div class="admonition-header" data-bs-toggle="collapse" data-bs-target="#{{ $collapseId }}" aria-expanded="true" aria-controls="{{ $collapseId }}">
+        <i class="{{ index $iconMap $type | default (index $iconMap "note") }}"></i>
+        <strong>{{ $title }}</strong>
+        <button class="btn btn-link text-decoration-none collapse-toggle">
+            <i class="fas fa-chevron-down"></i>
+        </button>
+    </div>
+    <div id="{{ $collapseId }}" class="collapse {{ if $isOpen }} show {{ end }}">
+        {{ $inner }}
+    </div>
+</div>
