--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,6 +27,7 @@
 />
 <!-- Bootstrap CSS -->
 <link href="/bootstrap@5.0.2/css/bootstrap.min.css" rel="stylesheet" />
+<link href="/katex/katex.min.css" rel="stylesheet" />
 
 <!-- Custom styles -->
 <link href="/css/main.css" rel="stylesheet" />
