--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,10 @@
   <script src="/js/copyClipboard.js"></script>
   <script src="/tocbot/tocbot.min.js"></script>
   <script src="/js/mermaid@10.7.0.min.js"></script>
+  <script defer  src="/katex/katex.min.js"></script>
+  <script defer src="/katex/auto-render.min.js" onload="renderMathInElement(document.body);"></script>
   <script src="/js/menu.js"></script>
+
   {{ if .IsHome }}
   <script src="/js/fuse.min.js"></script>
   <script src="/js/search.js"></script>
