fix image not working

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,6 +29,7 @@
   <script defer  src="/katex/katex.min.js"></script>
   <script defer src="/katex/auto-render.min.js" onload="renderMathInElement(document.body);"></script>
   <script src="/js/menu.js"></script>
+  <script src="{{ "js/fix-image-paths.js" | relURL }}" defer></script>
 
   {{ if .IsHome }}
   <script src="/js/fuse.min.js"></script>
