update new layout

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,7 +30,9 @@
   <script defer src="/katex/auto-render.min.js" onload="renderMathInElement(document.body);"></script>
   <script src="/js/menu.js"></script>
   <script src="{{ "js/fix-image-paths.js" | relURL }}" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 
+ 
   {{ if .IsHome }}
   <script src="/js/fuse.min.js"></script>
   <script src="/js/search.js"></script>
