--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,53 +6,89 @@
   }
   .search-bar input[type="text"] {
     border: 1px solid #dfe1e5;
-    border-radius: 24px;
+    border-radius: 10px;
     padding: 10px 20px;
     width: calc(100% - 40px);
     margin-bottom: 20px;
   }
 
   .profile-section {
-    padding: 20px 0;
+    background-color: #f8f9fa; /* Màu nền của phần profile */
+    padding: 20px; /* Đệm bên trong phần profile */
+    border-radius: 8px; /* Bo tròn các góc */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Đổ bóng */
   }
+
   .profile-image {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 50%;
+    max-width: 200px; /* Hình ảnh profile tối đa chiều rộng */
+    border-radius: 2%; /* Bo tròn ảnh profile */
   }
+
   .social-icons a {
-    color: black;
-    margin: 0 10px;
+    color: #333; /* Màu chữ của các icon xã hội */
+    font-size: 1.5rem; /* Cỡ chữ */
+  }
+
+  .social-icons a:hover {
+    color: #007bff; /* Màu chữ khi di chuột qua */
+  }
+
+  .tag {
+    margin-top: 10px; /* Khoảng cách giữa các tag */
+  }
+
+  .tag .badge {
+    background-color: #6c757d; /* Màu nền của tag */
+    color: #fff; /* Màu chữ của tag */
+    border: 1px solid #6c757d; /* Viền của tag */
+    padding: 5px 10px; /* Đệm bên trong tag */
+    margin-right: 5px; /* Khoảng cách giữa các tag */
+    border-radius: 4px; /* Bo tròn các góc của tag */
+  }
+
+  .tag .badge:hover {
+    background-color: #343a40; /* Màu nền của tag khi di chuột qua */
+    border-color: #343a40; /* Màu viền của tag khi di chuột qua */
   }
 </style>
 <div class="container mt-4">
   <div class="row profile-section">
-    <div
-      class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end"
-    >
-      <img
-        src="{{.Site.Params.home.avatar}}"
-        alt="Profile"
-        class="profile-image"
-      />
+    <div class="col-12 col-md-3 d-flex align-items-center justify-content-center">
+      <img src="{{ .Site.Params.home.avatar }}" alt="Profile" class="profile-image" />
     </div>
-    <div class="col-12 col-md-8 d-flex align-items-center">
-      <div>
-        <h3>{{.Site.Params.home.title}}</h3>
-        <h2>{{.Site.Params.home.description}}</h2>
-        <div class="social-icons">
+    <div class="col-12 col-md-9">
+        <h3>{{ .Site.Params.home.title }}</h3>
+        <h5>{{ .Site.Params.home.description }}</h5>
+        <div class="mt-4">
+          <div class="d-inline tag">
+            <ul class="list-unstyled d-inline">
+              {{ range first 30 .Site.Taxonomies.tags.ByCount }}
+              <li class="d-inline ">
+                <a href="/tags/{{ .Name | urlize }}" class="text-decoration-none">
+                  <span class="badge">{{ .Name }} ({{ .Count }})</span>
+                </a>
+               
+              </li>
+              {{ end }}
+            </ul>
+          </div>
+        </div>
+
+        <div class="social-icons mt-3">
           <!-- Use icons from a library such as Font Awesome or similar -->
           {{ range .Site.Params.social }}
-          <a href="{{ .href }}" class="{{ .icon }}"></a>
+          <a href="{{ .href }}" class="me-3">
+            <i class="{{ .icon }}"></i>
+          </a>
           {{ end }}
         </div>
+
       </div>
     </div>
-  </div>
 
-  <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-    <!-- Repeat this block for each card -->
+
+
+  <div class="row row-cols-1 row-cols-md-3 mt-4 ">
     <div class="search-bar">
       <div class="mb-3">
         <input
@@ -64,13 +100,10 @@
       </div>
     </div>
   </div>
-
-  <div id="search-results" class="mt-4 row"></div>
+  <div id="search-results" class="row"></div>
   <div id="recent-posts">
-    <!-- 5 bài viết mới nhất -->
     <div class="recent-posts row">
-      <h2 class="text-center">Mới nhất</h2>
-      {{ range first 4 .Site.RegularPages }}
+      {{ range sort .Site.RegularPages "Date" "desc" }}
       <div class="col-md-3">
         <div class="card mb-4 shadow-sm">
           <div class="card-body">
@@ -85,22 +118,27 @@
               <a class="link-a" href="{{ .Permalink }}">{{ .Title }} </a>
             </h5>
             <p class="card-text limited-text">{{ .Description }}</p>
-            {{ range first 2 .Params.tags }} {{ $tagPage := $.Site.GetPage
-            (printf "/tags/%s" .) }}
-            <a href="{{ $.Page.Site.BaseURL }}tags/{{ . }}">
-              <span
-                class="badge bg-secondary"
-                style="border: 1px solid;color: {{ $tagPage.Params.color }}!important; background-color: {{ $tagPage.Params.background }}!important;"
-              >
-                #{{ . }}
-              </span>
-            </a>
-            {{ end }}
+            <div class="tag">
+              {{ if and (.Params.tags) (gt (len .Params.tags) 0) }} {{ range
+              first 2 .Params.tags }} {{ $tagPage := $.Site.GetPage (printf
+              "/tags/%s" .) }}
+              <a href="{{ $.Page.Site.BaseURL }}tags/{{ . }}">
+                <span
+                  class="badge bg-secondary"
+                  style="border: 1px solid;color: {{ $tagPage.Params.color }}!important; background-color: {{ $tagPage.Params.background }}!important;"
+                >
+                  #{{ . }}
+                </span>
+              </a>
+              {{ end }} {{ end }}
+            </div>
           </div>
         </div>
       </div>
       {{ end }}
     </div>
   </div>
+
+
 </div>
 {{ end }}
